# qtcreator-testplugin

./: CMakeLists.txt  QtCreatorTestPlugin.json.in  QtcreatorTestplugin.json.in  README.md  qtcreatortestplugin.cpp  qtcreatortestplugin.h  qtcreatortestplugin_global.h  qtcreatortestpluginconstants.h  qtcreatortestplugintr.h
.github/scripts/: plugin.json
.github/workflows/: build_cmake.yml
tests/auto/: tst_mytest.cpp
